--- a/index.html
+++ b/index.html
@@ -65,13 +65,10 @@
               </label>
 
               <div class="input-icon-container ">
-                <input list="options-countries" id="country" class="text-input input-with-datalist"/>
-                <datalist id="options-countries" class="datalist">
-                  <option value="country 1"></option>
-                  <option value="country 2"></option>
-                  <option value="country 3"></option>
-                </datalist>
-                <div class="input-icon select-icon"></div>
+                <input placeholder="Выбрать" list="options-countries" id="country"
+                       class="text-input input-with-datalist"/>
+                <datalist id="options-countries" class="datalist"></datalist>
+                <div class="input-icon select-icon select-icon--country"></div>
               </div>
 
               <div class="city-container">
@@ -79,15 +76,10 @@
                   Город
                 </label>
                 <div class="input-icon-container input-icon-container--city">
-                  <input list="options" id="city" class="text-input input-with-datalist"/>
-                  <datalist id="options" class="datalist">
-                    <option value="город 1"></option>
-                    <option value="город 2"></option>
-                    <option value="город 3"></option>
-                  </datalist>
-                  <div class="input-icon select-icon"></div>
+                  <input placeholder="Выбрать" list="options-cities" id="city" class="text-input input-with-datalist"/>
+                  <datalist id="options-cities" class="datalist"></datalist>
+                  <div class="input-icon select-icon select-icon--city"></div>
                 </div>
-
               </div>
 
             </div>
