--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
       <div class="onboarding__city-popup-underlay">
         <div class="onboarding__city-popup">
 
-          <input autocomplete="off" id="city-input" type="text" class="text-input onboarding__city-input" placeholder="Начните вводить название..." >
+          <input id="city-input" type="text" class="text-input onboarding__city-input" placeholder="Начните вводить название..." autocomplete="off">
 
           <label class="onboarding-labels" >
             Популярные города
@@ -242,12 +242,12 @@
           <div class="onboarding__coord-inputs">
             <div>
               <label for="onboarding__lat-input" class="onboarding-labels onboarding__coord-inputs-label">Широта</label>
-              <input class="text-input" type="number" id="onboarding__lat-input" placeholder="00.0000" >
+              <input class="text-input" type="number" id="onboarding__lat-input" placeholder="00.0000" autocomplete="off" >
             </div>
 
             <div>
               <label for="onboarding__lng-input" class="onboarding-labels onboarding__coord-inputs-label">Долгота</label>
-              <input class="text-input" type="number" id="onboarding__lng-input" placeholder="00.0000">
+              <input class="text-input" type="number" id="onboarding__lng-input" placeholder="00.0000" autocomplete="off">
             </div>
             
             
