--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
       <div class="onboarding__city-popup-underlay">
         <div class="onboarding__city-popup">
 
-          <input id="city-input" type="text" class="text-input onboarding__city-input" placeholder="Начните вводить название..." autocomplete="off">
+          <input id="onboarding__city-in-popup-input" type="text" class="text-input onboarding__city-input" placeholder="Начните вводить название..." autocomplete="off">
 
           <label class="onboarding-labels" >
             Популярные города
