all cities manipulations

--- a/index.html
+++ b/index.html
@@ -231,12 +231,15 @@
                  placeholder="Начните вводить название..." autocomplete="off">
 
           <div class="onboarding__popular-cities-wrapper">
-            <label class="onboarding-labels">
+            <label class="onboarding-labels onboarding__popular-cities-label">
               Популярные города
             </label>
 
-            <ul class="onboarding__popular-cities">
-            </ul>
+            <div class="onboarding__popular-cities-wrapper-for-scroll">
+              <ul class="onboarding__popular-cities">
+
+              </ul>
+            </div>
           </div>
 
           <p class="onboarding-labels onboarding__coord-label">
